fixed overflow

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -57,6 +57,7 @@ body {
   color: var(--primaryTextColor);
   background-color: var(--colorSecondary-dkr);
   background-image: url(../img/bg-assets/bg.png);
+  overflow-x: hidden;
 }
 
 ._container {
