--- a/app/scss/_main.scss
+++ b/app/scss/_main.scss
@@ -9,6 +9,7 @@ body {
 
   background-color:  var(--colorSecondary-dkr);
   background-image: url(../img/bg-assets/bg.png);
+  overflow-x: hidden;
 }
 
 ._container {
